--- a/cr7/index.html
+++ b/cr7/index.html
@@ -18,23 +18,22 @@
     <!--nav bar-->
     <nav class="container flex">
         <h2 class="logo"><span class="primary-text">Photo</span>Grapz</h2>
-        <div class="nav-links" id="nav-links">
-            <ul class="flex">
-                <li><a href="#" class="hover-link primary-text">Home</a></li>
-                <li><a href="#" class="hover-link">About</a></li>
-                <li><a href="#" class="hover-link">Services</a><span><i class="fa fa-angle-down"></i></span></li>
-                <li><a href="#" class="hover-link">Blog</a><i class="fa fa-angle-down"></i></li>
-                <li><a href="#" class="hover-link">Contact</a></li>
-            </ul>
-        </div>
-        <p><i class="fa fa-pipe" style="color: red"></i></p>
-        <button class="hover-link primary-button">Get In Touch</button>
-    </nav>
+        <ul class="flex">
+            <li><a href="#" class="hover-link primary-text">Home</a></li>
+            <li><a href="#" class="hover-link">About</a></li>
+            <li><a href="#" class="hover-link">Services</a><span><i class="fa fa-angle-down"></i></span></li>
+            <li><a href="#" class="hover-link">Blog</a><i class="fa fa-angle-down"></i></li>
+            <li><a href="#" class="hover-link">Contact</a></li>
+            <li><div class="pipe"></div></li>
+            <li><button class="hover-link nav-button primary-button">Get In Touch</button></li>
+        </ul>
+        </nav>
 
     <!--hero section-->
-    <section>
+    <section class="container hero-section flex">
         <div class="hero-section-left">
-            <h1><span>Hello, my name is...</span>Cristiano <span class="primary-text">Ronaldo</span> Dos Santos</h1>
+            <h3>Hello, my name is...</h3>
+            <h1>Cristiano <span class="primary-text">Ronaldo</span> Dos Santos</h1>
             <p>I believe that photography is not just about taking pictures, but it's also about capturing emotions and memories that will last a lifetime.</p>
         </div>
 
