added css to hero section

--- a/cr7/index.html
+++ b/cr7/index.html
@@ -22,7 +22,7 @@
             <li><a href="#" class="hover-link primary-text">Home</a></li>
             <li><a href="#" class="hover-link">About</a></li>
             <li><a href="#" class="hover-link">Services</a><span><i class="fa fa-angle-down"></i></span></li>
-            <li><a href="#" class="hover-link">Blog</a><i class="fa fa-angle-down"></i></li>
+            <li><a href="#" class="hover-link">Blog</a><span><i class="fa fa-angle-down"></i></span></li>
             <li><a href="#" class="hover-link">Contact</a></li>
             <li><div class="pipe"></div></li>
             <li><button class="hover-link nav-button primary-button">Get In Touch</button></li>
@@ -39,11 +39,9 @@
 
         <div class="hero-section-right">
             <h3>My Awesome Clients</h3>
-
             <div>
                 <a>See More <span><i class="fa fa-long-arrow-right"></i></span></a>
             </div>
-
             <button class="primary-button">See my Biodata <span><i class="fa fa-long-arrow-right"></i></span></button>
         </div>
         
@@ -53,12 +51,12 @@
     </section>
 
     <!--    about me section-->
-    <section>
+    <section class="container about-me-section flex">>
         <div class="about-me-left">
             <h3>About Me</h3>
-            <h2>Want to Know More<span class="primary-text">About</span> me?</h2>
-            <p>As a photographer, my passion is to capture moments that tell a story. With each click of the camera, I strive to create images that are not only beautiful, but also meaningful.<br>My style is a mix of classic and contemporary, with a focus on natural light and authentic moments.</p>
-            <button class="primary-button">See More <span><i class="fa fa-long-arrow-right"></i></span></button>
+            <h2>Want to Know More <span class="primary-text">About</span> me?</h2>
+            <p>As a photographer, my passion is to capture moments that tell a story. With each click of the camera, I strive to create images that are not only beautiful, but also meaningful.<br> <br>My style is a mix of classic and contemporary, with a focus on natural light and authentic moments.</p>
+            <button class="primary-button-with-arrow">See More <span><i class="fa fa-long-arrow-right"></i></span></button>
             <a href="#">See My Profile</a>
         </div>
         
@@ -69,11 +67,9 @@
     </section>
 
     <!--Service section-->
-    <section>
+    <section class="container service-section flex">
         <div class="service-section-left">
-            <div class="service-section-left-image">
-                <img src="./assets/service-section-image.png" alt="">
-            </div>
+            <img src="./assets/service-section-image.png" alt="">
         </div>
 
         <div class="service-section-right">
