css added about me section

--- a/cr7/index.html
+++ b/cr7/index.html
@@ -56,8 +56,10 @@
             <h3>About Me</h3>
             <h2>Want to Know More <span class="primary-text">About</span> me?</h2>
             <p>As a photographer, my passion is to capture moments that tell a story. With each click of the camera, I strive to create images that are not only beautiful, but also meaningful.<br> <br>My style is a mix of classic and contemporary, with a focus on natural light and authentic moments.</p>
-            <button class="primary-button-with-arrow">See More <span><i class="fa fa-long-arrow-right"></i></span></button>
-            <a href="#">See My Profile</a>
+            <div class="about-me-left-buttons-and-link flex">
+                <button class="primary-button-with-arrow">See More <span><i class="fa fa-long-arrow-right"></i></span></button>
+                <a href="#">See My Profile</a>
+            </div>
         </div>
         
         <div class="about-me-right">
@@ -76,22 +78,22 @@
             <h3>Our Services</h3>
             <h2>What <span class="primary-text">can I do?</span></h2>
 
-            <div class="service-section-right-personal-photo">
+            <div class="service-section-right-card personal-photo">
                 <h4>Personal Photos <span><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none"><path d="M18.4373 11.8854H10.9906C10.637 11.8854 10.2979 11.7449 10.0478 11.4948C9.79778 11.2448 9.6573 10.9057 9.6573 10.552C9.6573 10.1984 9.79778 9.85927 10.0478 9.60922C10.2979 9.35917 10.637 9.2187 10.9906 9.2187H21.6573C21.8325 9.21817 22.0062 9.25229 22.1682 9.31911C22.3302 9.38593 22.4774 9.48412 22.6013 9.60804C22.7252 9.73196 22.8234 9.87915 22.8902 10.0412C22.957 10.2032 22.9912 10.3768 22.9906 10.552V21.2187C22.9906 21.5723 22.8502 21.9115 22.6001 22.1615C22.3501 22.4116 22.0109 22.552 21.6573 22.552C21.3037 22.552 20.9645 22.4116 20.7145 22.1615C20.4644 21.9115 20.324 21.5723 20.324 21.2187V13.7707L11.2853 22.8094C11.0351 23.0594 10.6959 23.1998 10.3422 23.1996C9.98847 23.1995 9.64931 23.0589 9.3993 22.8087C9.14929 22.5585 9.00891 22.2192 9.00903 21.8656C9.00916 21.5119 9.14978 21.1727 9.39997 20.9227L18.4373 11.8854Z" fill="#24282C"/></svg></span></h4>
-                <p>Personal photos: cherished memories, reflections of who we are.</p>
+                <p>Personal photos: cherished memories,<br> reflections of who we are.</p>
             </div>
 
-            <div class="service-section-right-event-photography">
-                <h4>Copy Event Photography <span><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none"><path d="M18.4373 11.8854H10.9906C10.637 11.8854 10.2979 11.7449 10.0478 11.4948C9.79778 11.2448 9.6573 10.9057 9.6573 10.552C9.6573 10.1984 9.79778 9.85927 10.0478 9.60922C10.2979 9.35917 10.637 9.2187 10.9906 9.2187H21.6573C21.8325 9.21817 22.0062 9.25229 22.1682 9.31911C22.3302 9.38593 22.4774 9.48412 22.6013 9.60804C22.7252 9.73196 22.8234 9.87915 22.8902 10.0412C22.957 10.2032 22.9912 10.3768 22.9906 10.552V21.2187C22.9906 21.5723 22.8502 21.9115 22.6001 22.1615C22.3501 22.4116 22.0109 22.552 21.6573 22.552C21.3037 22.552 20.9645 22.4116 20.7145 22.1615C20.4644 21.9115 20.324 21.5723 20.324 21.2187V13.7707L11.2853 22.8094C11.0351 23.0594 10.6959 23.1998 10.3422 23.1996C9.98847 23.1995 9.64931 23.0589 9.3993 22.8087C9.14929 22.5585 9.00891 22.2192 9.00903 21.8656C9.00916 21.5119 9.14978 21.1727 9.39997 20.9227L18.4373 11.8854Z" fill="#24282C"/></svg></span></h4>
+            <div class="service-section-right-card event-photography">
+                <h4>Event Photography <span><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none"><path d="M18.4373 11.8854H10.9906C10.637 11.8854 10.2979 11.7449 10.0478 11.4948C9.79778 11.2448 9.6573 10.9057 9.6573 10.552C9.6573 10.1984 9.79778 9.85927 10.0478 9.60922C10.2979 9.35917 10.637 9.2187 10.9906 9.2187H21.6573C21.8325 9.21817 22.0062 9.25229 22.1682 9.31911C22.3302 9.38593 22.4774 9.48412 22.6013 9.60804C22.7252 9.73196 22.8234 9.87915 22.8902 10.0412C22.957 10.2032 22.9912 10.3768 22.9906 10.552V21.2187C22.9906 21.5723 22.8502 21.9115 22.6001 22.1615C22.3501 22.4116 22.0109 22.552 21.6573 22.552C21.3037 22.552 20.9645 22.4116 20.7145 22.1615C20.4644 21.9115 20.324 21.5723 20.324 21.2187V13.7707L11.2853 22.8094C11.0351 23.0594 10.6959 23.1998 10.3422 23.1996C9.98847 23.1995 9.64931 23.0589 9.3993 22.8087C9.14929 22.5585 9.00891 22.2192 9.00903 21.8656C9.00916 21.5119 9.14978 21.1727 9.39997 20.9227L18.4373 11.8854Z" fill="#24282C"/></svg></span></h4>
                 <p>Event photography: capturing moments,creating memories.</p>
             </div>
 
-            <div class="service-section-right-portrait-lifestyle">
+            <div class="service-section-right-card portrait-lifestyle">
                 <h4>Portrait & Life Style<span><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none"><path d="M18.4373 11.8854H10.9906C10.637 11.8854 10.2979 11.7449 10.0478 11.4948C9.79778 11.2448 9.6573 10.9057 9.6573 10.552C9.6573 10.1984 9.79778 9.85927 10.0478 9.60922C10.2979 9.35917 10.637 9.2187 10.9906 9.2187H21.6573C21.8325 9.21817 22.0062 9.25229 22.1682 9.31911C22.3302 9.38593 22.4774 9.48412 22.6013 9.60804C22.7252 9.73196 22.8234 9.87915 22.8902 10.0412C22.957 10.2032 22.9912 10.3768 22.9906 10.552V21.2187C22.9906 21.5723 22.8502 21.9115 22.6001 22.1615C22.3501 22.4116 22.0109 22.552 21.6573 22.552C21.3037 22.552 20.9645 22.4116 20.7145 22.1615C20.4644 21.9115 20.324 21.5723 20.324 21.2187V13.7707L11.2853 22.8094C11.0351 23.0594 10.6959 23.1998 10.3422 23.1996C9.98847 23.1995 9.64931 23.0589 9.3993 22.8087C9.14929 22.5585 9.00891 22.2192 9.00903 21.8656C9.00916 21.5119 9.14978 21.1727 9.39997 20.9227L18.4373 11.8854Z" fill="#24282C"/></svg></span></h4>
                 <p>Portrait & lifestyle photography: showcasing individuality, telling unique stories.</p>
             </div>
 
-            <div class="service-section-right-fashion-model">
+            <div class="service-section-right-card fashion-model">
                 <h4>Fashion & Model<span><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none"><path d="M18.4373 11.8854H10.9906C10.637 11.8854 10.2979 11.7449 10.0478 11.4948C9.79778 11.2448 9.6573 10.9057 9.6573 10.552C9.6573 10.1984 9.79778 9.85927 10.0478 9.60922C10.2979 9.35917 10.637 9.2187 10.9906 9.2187H21.6573C21.8325 9.21817 22.0062 9.25229 22.1682 9.31911C22.3302 9.38593 22.4774 9.48412 22.6013 9.60804C22.7252 9.73196 22.8234 9.87915 22.8902 10.0412C22.957 10.2032 22.9912 10.3768 22.9906 10.552V21.2187C22.9906 21.5723 22.8502 21.9115 22.6001 22.1615C22.3501 22.4116 22.0109 22.552 21.6573 22.552C21.3037 22.552 20.9645 22.4116 20.7145 22.1615C20.4644 21.9115 20.324 21.5723 20.324 21.2187V13.7707L11.2853 22.8094C11.0351 23.0594 10.6959 23.1998 10.3422 23.1996C9.98847 23.1995 9.64931 23.0589 9.3993 22.8087C9.14929 22.5585 9.00891 22.2192 9.00903 21.8656C9.00916 21.5119 9.14978 21.1727 9.39997 20.9227L18.4373 11.8854Z" fill="#24282C"/></svg></span></h4>
                 <p>Fashion and model photography: striking poses, showcasing style.</p>
             </div>
