updated div to article tag in hero and about me section

--- a/cr7/index.html
+++ b/cr7/index.html
@@ -32,11 +32,11 @@
 
     <!--hero section-->
     <section class="container hero-section flex">
-        <div class="hero-section-left">
+        <article class="hero-section-left">
             <h3>Hello, my name is...</h3>
             <h1>Cristiano <span class="primary-text">Ronaldo</span> Dos Santos</h1>
             <p>I believe that photography is not just about taking pictures, but it's also about capturing emotions and memories that will last a lifetime.</p>
-        </div>
+        </article>
 
         <div class="hero-section-right flex">
             <h3>My Awesome Clients</h3>
@@ -68,7 +68,7 @@
 
     <!--    about me section-->
     <section class="container about-me-section flex">>
-        <div class="about-me-left">
+        <article class="about-me-left">
             <h3>About Me</h3>
             <h2>Want to Know More <span class="primary-text">About</span> me?</h2>
             <p>As a photographer, my passion is to capture moments that tell a story. With each click of the camera, I strive to create images that are not only beautiful, but also meaningful.<br> <br>My style is a mix of classic and contemporary, with a focus on natural light and authentic moments.</p>
@@ -78,7 +78,7 @@
                 <a href="#">See My Profile</a>
             </div>
 
-        </div>
+        </article>
         
         <div class="about-me-right">
             <!-- <div class="circle"></div> -->
